src/core/catchem_api.hpp

int catchem_core_create_from_config_with_grid_checked(const char* config_file, int ncols, int nlevels, void** core_out);
int catchem_core_destroy_checked(void* core_ptr);
int catchem_core_get_state_manager_checked(void* core_ptr, void** state_out);
int catchem_get_last_error(char* buffer, int max_len);
/**
 * @brief Creates the C++ Core orchestrator from a YAML config file.
 * @param config_file Null-terminated filesystem path.
 * @return Opacity-wrapped void* handle pointing to catchem::Core.
 */
void* catchem_core_create_from_config(const char* config_file);
/**
 * @brief Creates the Core from a YAML config file with host-supplied grid dimensions.
 *
 * Configuration comes from the file; the grid is sized by the host (required
 * under domain decomposition, e.g. UFS per-rank tiles).
 * @param config_file Null-terminated filesystem path.
 * @param ncols Host-local number of columns (nx*ny).
 * @param nlevels Number of vertical levels.
 * @return Opacity-wrapped void* handle pointing to catchem::Core, or NULL on failure.
 */
void* catchem_core_create_from_config_with_grid(const char* config_file, int ncols, int nlevels);
/**
 * @brief Destroys the Core orchestrator instance and releases heap memory.
 * @param core_ptr Pointer to the active catchem::Core instance.
 */
void catchem_core_destroy(void* core_ptr);
/**
 * @brief Extracts the underlying StateManager handle from Core.
 * @param core_ptr Pointer to the active catchem::Core instance.
 * @return Pointer to catchem::StateManager.
 */
void* catchem_core_get_state_manager(void* core_ptr);
/** @brief Bind a 2D meteorological field by name. */
void catchem_state_bind_met_2d(void* state_ptr, const char* name, double* ptr);
/** @brief Bind a 3D meteorological field by name. */
void catchem_state_bind_met_3d(void* state_ptr, const char* name, double* ptr);
int catchem_state_bind_met_2d_checked(void* state_ptr, const char* name, double* ptr, int dim1, int dim2);
int catchem_state_bind_met_3d_checked(void* state_ptr, const char* name, double* ptr, int dim1, int dim2, int dim3);
int catchem_state_bind_met_3d_axis_checked(void* state_ptr, const char* name, double* ptr, int dim1, int dim2, int dim3,
                                           int semantic_axis);
/** @brief Binds the contiguous, multi-species unified chemistry concentrations array. */
void catchem_state_bind_unified_chemistry(void* state_ptr, double* ptr);
int catchem_state_bind_unified_chemistry_checked(void* state_ptr, double* ptr, int dim1, int dim2, int dim3);
/** @brief Synchronizes registered host pointers to Kokkos device memory space. */
void catchem_state_sync_to_device(void* state_ptr);
int catchem_state_sync_to_device_checked(void* state_ptr);
/** @brief Synchronizes Kokkos device calculations back to host buffers. */
void catchem_state_sync_to_host(void* state_ptr);
int catchem_state_sync_to_host_checked(void* state_ptr);
double* catchem_state_get_species_conc_pointer(void* state_ptr, int species_index);
int catchem_state_get_species_conc_pointer_checked(void* state_ptr, int species_index, int dim1, int dim2,
                                                   double** ptr_out);
/**
 * @brief Executes a single timestepped execution over scheduled processes.
 * @param core_ptr Core pointer.
 * @param dt Step size in seconds.
 */
int catchem_core_run_timestep(void* core_ptr, double dt);
/** @brief Registers and attaches an active physics process handler. */
void catchem_core_add_process_by_name(void* core_ptr, const char* name);
/** @brief Returns the number of active physics processes scheduled on the Core. */
int catchem_core_get_num_processes(void* core_ptr);
int catchem_core_get_num_processes_checked(void* core_ptr, int* count_out);
int catchem_core_get_required_host_field_count_checked(void* core_ptr, int* count_out);
int catchem_core_get_required_host_field_name_checked(void* core_ptr, int index, char* name_out, int name_out_len);
// Grid and Configuration API
void catchem_get_grid_dimensions(void* core_ptr, int* nx, int* ny, int* nz);
double catchem_get_config_timestep(void* core_ptr);
int catchem_config_get_output_frequency(void* core_ptr);
int catchem_config_get_compress_level(void* core_ptr);
void catchem_config_get_output_directory(void* core_ptr, char* buffer, int max_len);
void catchem_config_get_output_prefix(void* core_ptr, char* buffer, int max_len);
int catchem_config_get_latlon_output(void* core_ptr);
int catchem_config_get_diag_enabled(void* core_ptr);
int catchem_config_get_process_diagnostics_enabled(void* core_ptr);
int catchem_config_get_diag_species_count(void* core_ptr);
int catchem_diag_register_contract_checked(void* core_ptr, const char* name, const char* desc, const char* units,
                                           int rank, const int* dims, const int* axes, int policy, double reset_value);
int catchem_diag_get_contract(void* core_ptr, const char* name, int* generation, int* availability, int* latest_writer,
                              int* policy);