src/core/catchem_api_internal.hpp

void catchem_register_carbchem_cpp() CATCHEM_WEAK_SYMBOL;
void catchem_register_drydep_cpp() CATCHEM_WEAK_SYMBOL;
void catchem_register_dust_cpp() CATCHEM_WEAK_SYMBOL;
void catchem_register_seasalt_cpp() CATCHEM_WEAK_SYMBOL;
void catchem_register_settling_cpp() CATCHEM_WEAK_SYMBOL;
void catchem_register_so4chem_cpp() CATCHEM_WEAK_SYMBOL;
void catchem_register_wetdep_cpp() CATCHEM_WEAK_SYMBOL;