src/api/CATChem_API.F90

!> \file CATChem_API.F90
!! \brief Modernized high-level BIND(C) API for host model integration
!!
!! This module provides the standard, backward-compatible CATChem_Model
!! derived type used by Earth System drivers (like NUOPC and UFS).
!! It delegates all memory management, synchronization, and process scheduling
!! directly to the modernized top-down C++ Core via standard BIND(C) bridges.
!!
module CATChem_API
   use iso_c_binding
   use catchem_bridge_precision, only: fp
   use catchem_bridge_error, only: CC_SUCCESS, CC_FAILURE

   implicit none
   private

   public :: CATChem_Model, catchem_diag_register_contract_checked, catchem_diag_get_contract

   !=========================================================================
   ! C-API Interfaces to catchem_api.cpp
   !=========================================================================
   interface
      integer(c_int) function catchem_core_create_from_config_with_grid_checked(config_file, ncols, nlevels, core_out) &
         bind(C, name="catchem_core_create_from_config_with_grid_checked")
         import :: c_char, c_ptr, c_int
         character(kind=c_char), intent(in) :: config_file(*)
         integer(c_int), value :: ncols, nlevels
         type(c_ptr), intent(out) :: core_out
      end function

      integer(c_int) function catchem_core_destroy_checked(core_ptr) bind(C, name="catchem_core_destroy_checked")
         import :: c_ptr, c_int
         type(c_ptr), value :: core_ptr
      end function

      integer(c_int) function catchem_core_get_state_manager_checked(core_ptr, state_out) &
         bind(C, name="catchem_core_get_state_manager_checked")
         import :: c_ptr, c_int
         type(c_ptr), value :: core_ptr
         type(c_ptr), intent(out) :: state_out
      end function

      integer(c_int) function catchem_get_last_error(buffer, max_len) bind(C, name="catchem_get_last_error")
         import :: c_char, c_int
         character(kind=c_char), intent(out) :: buffer(*)
         integer(c_int), value :: max_len
      end function

      type(c_ptr) function catchem_core_create_from_config(config_file) bind(C, name="catchem_core_create_from_config")
         import :: c_char, c_ptr
         character(kind=c_char), intent(in) :: config_file(*)
      end function

      type(c_ptr) function catchem_core_create_from_config_with_grid(config_file, ncols, nlevels) &
         bind(C, name="catchem_core_create_from_config_with_grid")
         import :: c_char, c_ptr, c_int
         character(kind=c_char), intent(in) :: config_file(*)
         integer(c_int), value :: ncols, nlevels
      end function

      subroutine catchem_core_destroy(core_ptr) bind(C, name="catchem_core_destroy")
         import :: c_ptr
         type(c_ptr), value :: core_ptr
      end subroutine

      subroutine catchem_register_carbchem_cpp() bind(C, name="catchem_register_carbchem_cpp")
      end subroutine

      subroutine catchem_register_drydep_cpp() bind(C, name="catchem_register_drydep_cpp")
      end subroutine

      subroutine catchem_register_dust_cpp() bind(C, name="catchem_register_dust_cpp")
      end subroutine

      subroutine catchem_register_seasalt_cpp() bind(C, name="catchem_register_seasalt_cpp")
      end subroutine

      subroutine catchem_register_settling_cpp() bind(C, name="catchem_register_settling_cpp")
      end subroutine

      subroutine catchem_register_so4chem_cpp() bind(C, name="catchem_register_so4chem_cpp")
      end subroutine

      subroutine catchem_register_wetdep_cpp() bind(C, name="catchem_register_wetdep_cpp")
      end subroutine

      type(c_ptr) function catchem_core_get_state_manager(core_ptr) bind(C, name="catchem_core_get_state_manager")
         import :: c_ptr
         type(c_ptr), value :: core_ptr
      end function

      subroutine catchem_core_add_process_by_name(core_ptr, name) bind(C, name="catchem_core_add_process_by_name")
         import :: c_ptr, c_char
         type(c_ptr), value :: core_ptr
         character(kind=c_char), intent(in) :: name(*)
      end subroutine

      integer(c_int) function catchem_core_get_num_processes(core_ptr) bind(C, name="catchem_core_get_num_processes")
         import :: c_ptr, c_int
         type(c_ptr), value :: core_ptr
      end function

      integer(c_int) function catchem_core_get_num_processes_checked(core_ptr, count_out) &
         bind(C, name="catchem_core_get_num_processes_checked")
         import :: c_ptr, c_int
         type(c_ptr), value :: core_ptr
         integer(c_int), intent(out) :: count_out
      end function

      integer(c_int) function catchem_core_get_required_host_field_count_checked(core_ptr, count_out) &
         bind(C, name="catchem_core_get_required_host_field_count_checked")
         import :: c_ptr, c_int
         type(c_ptr), value :: core_ptr
         integer(c_int), intent(out) :: count_out
      end function

      integer(c_int) function catchem_core_get_required_host_field_name_checked(core_ptr, index, name_out, name_out_len) &
         bind(C, name="catchem_core_get_required_host_field_name_checked")
         import :: c_ptr, c_char, c_int
         type(c_ptr), value :: core_ptr
         integer(c_int), value :: index, name_out_len
         character(kind=c_char), intent(out) :: name_out(*)
      end function

      integer(c_int) function catchem_core_run_timestep(core_ptr, dt) bind(C, name="catchem_core_run_timestep")
         import :: c_ptr, c_double, c_int
         type(c_ptr), value :: core_ptr
         real(c_double), value :: dt
      end function

      subroutine catchem_state_bind_met_3d(state_ptr, name, ptr) bind(C, name="catchem_state_bind_met_3d")
         import :: c_ptr, c_char
         type(c_ptr), value :: state_ptr
         character(kind=c_char), intent(in) :: name(*)
         type(c_ptr), value :: ptr
      end subroutine

      integer(c_int) function catchem_state_bind_met_3d_checked(state_ptr, name, ptr, dim1, dim2, dim3) &
         bind(C, name="catchem_state_bind_met_3d_checked")
         import :: c_ptr, c_char, c_int
         type(c_ptr), value :: state_ptr, ptr
         character(kind=c_char), intent(in) :: name(*)
         integer(c_int), value :: dim1, dim2, dim3
      end function

      integer(c_int) function catchem_state_bind_met_3d_axis_checked(state_ptr, name, ptr, dim1, dim2, dim3, axis) &
         bind(C, name="catchem_state_bind_met_3d_axis_checked")
         import :: c_ptr, c_char, c_int
         type(c_ptr), value :: state_ptr, ptr
         character(kind=c_char), intent(in) :: name(*)
         integer(c_int), value :: dim1, dim2, dim3, axis
      end function

      subroutine catchem_state_bind_met_2d(state_ptr, name, ptr) bind(C, name="catchem_state_bind_met_2d")
         import :: c_ptr, c_char
         type(c_ptr), value :: state_ptr
         character(kind=c_char), intent(in) :: name(*)
         type(c_ptr), value :: ptr
      end subroutine

      integer(c_int) function catchem_state_bind_met_2d_checked(state_ptr, name, ptr, dim1, dim2) &
         bind(C, name="catchem_state_bind_met_2d_checked")
         import :: c_ptr, c_char, c_int
         type(c_ptr), value :: state_ptr, ptr
         character(kind=c_char), intent(in) :: name(*)
         integer(c_int), value :: dim1, dim2
      end function

      subroutine catchem_state_bind_unified_chemistry(state_ptr, ptr) bind(C, name="catchem_state_bind_unified_chemistry")
         import :: c_ptr
         type(c_ptr), value :: state_ptr
         type(c_ptr), value :: ptr
      end subroutine

      integer(c_int) function catchem_state_bind_unified_chemistry_checked(state_ptr, ptr, dim1, dim2, dim3) &
         bind(C, name="catchem_state_bind_unified_chemistry_checked")
         import :: c_ptr, c_int
         type(c_ptr), value :: state_ptr, ptr
         integer(c_int), value :: dim1, dim2, dim3
      end function

      subroutine catchem_state_sync_to_device(state_ptr) bind(C, name="catchem_state_sync_to_device")
         import :: c_ptr
         type(c_ptr), value :: state_ptr
      end subroutine

      integer(c_int) function catchem_state_sync_to_device_checked(state_ptr) &
         bind(C, name="catchem_state_sync_to_device_checked")
         import :: c_ptr, c_int
         type(c_ptr), value :: state_ptr
      end function

      subroutine catchem_state_sync_to_host(state_ptr) bind(C, name="catchem_state_sync_to_host")
         import :: c_ptr
         type(c_ptr), value :: state_ptr
      end subroutine

      integer(c_int) function catchem_state_sync_to_host_checked(state_ptr) &
         bind(C, name="catchem_state_sync_to_host_checked")
         import :: c_ptr, c_int
         type(c_ptr), value :: state_ptr
      end function

      type(c_ptr) function catchem_state_get_species_conc_pointer(state_ptr, index) &
         bind(C, name="catchem_state_get_species_conc_pointer")
         import :: c_ptr, c_int
         type(c_ptr), value :: state_ptr
         integer(c_int), value :: index
      end function

      integer(c_int) function catchem_state_get_species_conc_pointer_checked(state_ptr, index, dim1, dim2, ptr_out) &
         bind(C, name="catchem_state_get_species_conc_pointer_checked")
         import :: c_ptr, c_int
         type(c_ptr), value :: state_ptr
         integer(c_int), value :: index, dim1, dim2
         type(c_ptr), intent(out) :: ptr_out
      end function

      subroutine catchem_get_grid_dimensions(core_ptr, nx, ny, nz) bind(C, name="catchem_get_grid_dimensions")
         import :: c_ptr, c_int
         type(c_ptr), value :: core_ptr
         integer(c_int), intent(out) :: nx, ny, nz
      end subroutine

      real(c_double) function catchem_get_config_timestep(core_ptr) bind(C, name="catchem_get_config_timestep")
         import :: c_ptr, c_double
         type(c_ptr), value :: core_ptr
      end function

      integer(c_int) function catchem_config_get_output_frequency(core_ptr) &
         bind(C, name="catchem_config_get_output_frequency")
         import :: c_ptr, c_int
         type(c_ptr), value :: core_ptr
      end function

      integer(c_int) function catchem_config_get_compress_level(core_ptr) &
         bind(C, name="catchem_config_get_compress_level")
         import :: c_ptr, c_int
         type(c_ptr), value :: core_ptr
      end function

      subroutine catchem_config_get_output_directory(core_ptr, buffer, max_len) &
         bind(C, name="catchem_config_get_output_directory")
         import :: c_ptr, c_char, c_int
         type(c_ptr), value :: core_ptr
         character(kind=c_char), intent(out) :: buffer(*)
         integer(c_int), value :: max_len
      end subroutine

      subroutine catchem_config_get_output_prefix(core_ptr, buffer, max_len) &
         bind(C, name="catchem_config_get_output_prefix")
         import :: c_ptr, c_char, c_int
         type(c_ptr), value :: core_ptr
         character(kind=c_char), intent(out) :: buffer(*)
         integer(c_int), value :: max_len
      end subroutine

      integer(c_int) function catchem_config_get_latlon_output(core_ptr) &
         bind(C, name="catchem_config_get_latlon_output")
         import :: c_ptr, c_int
         type(c_ptr), value :: core_ptr
      end function

      integer(c_int) function catchem_config_get_diag_enabled(core_ptr) &
         bind(C, name="catchem_config_get_diag_enabled")
         import :: c_ptr, c_int
         type(c_ptr), value :: core_ptr
      end function

      integer(c_int) function catchem_config_get_process_diagnostics_enabled(core_ptr) &
         bind(C, name="catchem_config_get_process_diagnostics_enabled")
         import :: c_ptr, c_int
         type(c_ptr), value :: core_ptr
      end function

      integer(c_int) function catchem_config_get_diag_species_count(core_ptr) &
         bind(C, name="catchem_config_get_diag_species_count")
         import :: c_ptr, c_int
         type(c_ptr), value :: core_ptr
      end function
